--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>octoteam.tahiti</groupId>
-    <artifactId>performance</artifactId>
+    <artifactId>tahiti-performance</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
